# py-timeago

./: README.md  pyproject.toml
src/philiprehberger_timeago/: __init__.py
tests/: test_timeago.py
