[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-timeago"
version = "0.1.0"
description = "Convert timestamps to relative time phrases like '3 hours ago'"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["timeago", "relative", "timestamp", "datetime", "ago", "human"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-timeago"
Repository = "https://github.com/philiprehberger/py-timeago"
Issues = "https://github.com/philiprehberger/py-timeago/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_timeago"]
